@@ -9,6 +9,7 @@ import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,7 +20,7 @@ public class NotificacionService {
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     public NotificacionService(@Value("${notificaciones.file.path}") String notificacionesPath) {
-        this.notificacionesPath = Path.of(notificacionesPath);
+        this.notificacionesPath = Paths.get(notificacionesPath).normalize();
     }
 
     public List<Notificacion> obtenerNotificaciones() throws IOException {
